Definindo funções que retornam valores

--- a/Python_para_Data_Science_Pandas.ipynb
+++ b/Python_para_Data_Science_Pandas.ipynb
@@ -3344,36 +3344,76 @@
       "metadata": {
         "id": "-UG42RQJD1A9"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "def media(lista):\n",
+        "  valor = sum(lista) / len(lista)\n",
+        "  return valor"
+      ],
+      "execution_count": 19,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VJwdvoT5D1A-"
+        "id": "VJwdvoT5D1A-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a641671c-e983-4534-9f70-3f8486cf8a88"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "media([1,2,3,4,5,6,7,8])"
+      ],
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "AgAeJkpND1A-"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "resultado = media([1,2,3,4,5,6,7,8])"
+      ],
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_r616TevD1A_"
+        "id": "_r616TevD1A_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3f6c5aa0-342a-48ed-ca56-d0770911ac55"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "resultado"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3397,45 +3437,102 @@
       "metadata": {
         "id": "v0PUMegVD1BA"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "def media(lista):\n",
+        "  valor = sum(lista) / len(lista)\n",
+        "  return (valor, len(lista))"
+      ],
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ys-etom8D1BA"
+        "id": "Ys-etom8D1BA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0f541771-4416-4764-de0b-9ca29540fedd"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "media([1,2,3,4,5,6,7,8,9])"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5.0, 9)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LERrvkMHD1BC"
       },
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "resultado, n = media([1,2,3,4,5,6,7,8,9])"
+      ],
+      "execution_count": 26,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "sqoFOWSsD1BC"
+        "id": "sqoFOWSsD1BC",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e90abf5f-14ec-425d-f03d-2c070337829a"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "resultado"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NdB_Jyw_D1BD"
+        "id": "NdB_Jyw_D1BD",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f7772382-5c16-4116-f7e8-42c034e0fbd4"
       },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+      "source": [
+        "n"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "markdown",
